# tang

./: .gitignore  README.md
.gitignore/: .temp.txt.swp
config/scripts/: cubase.py
cugo_detection/: CMakeLists.txt  package.xml
cugo_detection/include/: object_detection.h
cugo_detection/launch/: red_detection.launch
cugo_detection/scripts/: data.py  haar_human.py  hariss_detection.py  hogsvm.py  hogsvm_human.py  human_detection.py  particle.py  red_detection.py  tomasi.py
cugo_detection/src/: human_detection.cpp  object_detection.cpp  object_detection_old.cpp  old_object_detection.cpp
cugo_teleop/: CMakeLists.txt
cugo_teleop/config/: camera.yaml
cugo_teleop/launch/: cubase.launch  cugo_teleop.launch
cugo_teleop/scripts/: cubase.py  cubase_teleop.py
doc/: Doxyfile
doc/html/: graph_legend.html  index.html  menudata.js
doc/latex/: refman.tex
tang_bringup/: CMakeLists.txt  package.xml
tang_bringup/launch/: tang_bringup.launch
tang_bringup/scripts/: clear_lcd.py  display_hellow_world.py  tang_bringup.py
tang_control/: CMakeLists.txt  package.xml
tang_control/scripts/: config.py  direction_control.py  display_ip.py  motor.py  obstacle_distance_calculator.py  tang_control.py
tang_detection/: CMakeLists.txt  package.xml
tang_detection/config/: debug.rviz  yaml_test.yaml
tang_detection/launch/: human_detection_debug.launch  red_detection.launch  tang_detection.launch
tang_detection/module/: __init__.py
tang_detection/msg/: Command.msg
tang_msgs/: CMakeLists.txt  package.xml
tang_msgs/msg/: BoundingBox.msg  Command.msg  DetectionResult.msg  Emergency.msg  HumanInfo.msg  Modechange.msg  ObstacleDistance.msg
tang_opencvdnn/: main.py
tang_teleop/: CMakeLists.txt  package.xml
test/: test_changing_vel_control.py  test_check_encoder_val.py  test_config.py  test_crawler_rotation_speed.py  test_encoder.py  test_encoder_check.py  test_gear_count.py  test_led.py  test_mode_change.py  test_mode_switch.py  test_vel_control.py
(+58 files in other folders)
