<?xml version="1.0"?>
<package format="2">
  <name>tang_bringup</name>
  <version>0.0.0</version>
  <description>The tang_bringup package</description>

  <maintainer email="h.shunji1206@gmail.com">ShunjiHashimoto</maintainer>
  <license>Apache License 2.0</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
